[package]
name = "blog_backend"
version = "0.1.0"
authors = ["Kamil Koczurek <koczurekk@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
rand = "0.5.5"
sha2 = "0.8.0"
r2d2 = "0.8.3"
num_cpus = "1.0"
serde_derive = "1.0"
rocket = "0.4.0-rc.1"
pulldown-cmark = "0.2.0"
rocket_contrib = "0.4.0-rc.1"
diesel = { version = "1.0.0", features = ["mysql", "r2d2"] }
